--- a/applications/dashboard/scss/compatibility/_mixins.scss
+++ b/applications/dashboard/scss/compatibility/_mixins.scss
@@ -84,3 +84,18 @@
     -ms-user-select: none;
     user-select: none;
 }
+
+@mixin disabledInput {
+    pointer-events: none;
+    user-select: none;
+    cursor: default;
+    opacity: .5;
+}
+
+@mixin singleLineEllipsis {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
