Removed broken calculation for SSO button width, used new mockup Theme compatibility with other themes

--- a/applications/dashboard/scss/new-components/_authenticateUser.scss
+++ b/applications/dashboard/scss/new-components/_authenticateUser.scss
@@ -16,8 +16,8 @@ $authenticateUserName-opacity: .6 !default;
 $authenticateUserArrowDown-opacity: .6 !default;
 $icon_size: 24px !default;
 $icon-large_size: 42px !default;
-$authenticateMethod-width: 200px !default;
 $authenticateMethod-button_boxShadow: 0 1px 3px 0 rgba(0, 0, 0, .3) !default;
+$authenticateMethod-button_horizontalMargin: 12px !default;
 
 .authenticateUserCol {
     padding: 0 $authenticateUser-column_horizontalPadding;
@@ -154,7 +154,6 @@ $authenticateMethod-button_boxShadow: 0 1px 3px 0 rgba(0, 0, 0, .3) !default;
         background-image: none;
         box-sizing: border-box;
         text-decoration: none !important;
-
     }
 
     &.button-sso {
@@ -163,22 +162,32 @@ $authenticateMethod-button_boxShadow: 0 1px 3px 0 rgba(0, 0, 0, .3) !default;
 }
 
 .button-ssoLabel {
-    margin-left: 12px;
+    margin: {
+        left: $authenticateMethod-button_horizontalMargin;
+        right: $authenticateMethod-button_horizontalMargin;
+    }
     font-size: 14px;
     font-weight: normal;
+    text-shadow: none;
 }
 
 .ssoMethod-icon {
     width: $icon_size;
     height: auto;
+
+    &.ssoMethod-iconSpacer {
+        display: block;
+        visibility: hidden;
+        height: $icon_size;
+    }
 }
 
 .button-ssoContents {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
-    width: $authenticateMethod-width;
+    width: 100%;
     max-width: 100%;
 }
 
