--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -229,8 +229,10 @@ button.Close {
 
 .button-ssoLabel {
   margin-left: 12px;
+  margin-right: 12px;
   font-size: 14px;
   font-weight: normal;
+  text-shadow: none;
 }
 
 .ssoMethod-icon {
@@ -238,12 +240,18 @@ button.Close {
   height: auto;
 }
 
+.ssoMethod-icon.ssoMethod-iconSpacer {
+  display: block;
+  visibility: hidden;
+  height: 24px;
+}
+
 .button-ssoContents {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-wrap: wrap;
-  width: 200px;
+  width: 100%;
   max-width: 100%;
 }
 
@@ -473,6 +481,7 @@ label.checkbox input.checkbox-input {
 }
 
 .checkbox-label {
+  user-select: none;
   margin-left: 6px;
   line-height: inherit;
 }
