--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -1043,7 +1043,7 @@ label.checkbox input.checkbox-input {
   padding: 3px 0;
 }
 
-.atMentionList-item.isSelected .atMentionList-suggestion {
+.atMentionList-item.isActive .atMentionList-suggestion {
   background-color: #f4f3f5;
 }
 
