--- a/applications/dashboard/scss/editor/_richEditor.scss
+++ b/applications/dashboard/scss/editor/_richEditor.scss
@@ -616,7 +616,7 @@ $embedded-quote_fg: #A3A3A3 !default;
 }
 
 .atMentionList-item {
-    &.isSelected {
+    &.isActive {
         .atMentionList-suggestion {
             background-color: $richEditor-atMentionSelected_bg;
         }
