Group search update. Added pageHeading classes

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -504,6 +504,30 @@ label.checkbox input.checkbox-input {
   padding: 0;
 }
 
+.pageHeading {
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+
+.pageHeading .pageHeading-title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.pageHeading-main {
+  position: relative;
+  display: block;
+  width: 100%;
+  flex-grow: 1;
+}
+
+.pageHeading-actions {
+  display: flex;
+  align-self: center;
+}
+
 @keyframes spinnerLoader {
   0% {
     transform: rotate(73deg);
