--- a/applications/dashboard/scss/new-components/_pageHeading.scss
+++ b/applications/dashboard/scss/new-components/_pageHeading.scss
@@ -2,6 +2,7 @@
     display: flex;
     width: 100%;
     align-items: center;
+    flex-wrap: wrap;
 
     .pageHeading-title {
         display: block;
@@ -22,5 +23,6 @@
 .pageHeading-actions {
     display: flex;
     align-self: center;
+    max-width: 100%;
 }
 
