--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -674,7 +674,7 @@ label.checkbox input.checkbox-input {
 }
 
 .richEditor-upload {
-  display: none;
+  display: none !important;
 }
 
 .embedBar {
@@ -1094,6 +1094,45 @@ label.checkbox input.checkbox-input {
   user-select: all;
   color: inherit;
   font-weight: 600;
+}
+
+.Section-PostDiscussion #DiscussionForm select {
+  max-width: 100%;
+}
+
+.Section-PostDiscussion #DiscussionForm .FormWrapper {
+  padding-left: 36px;
+}
+
+.Section-PostDiscussion #DiscussionForm .FormWrapper .richEditor {
+  padding-left: 36px;
+}
+
+.CommentForm .CommentFormWrap .Form-HeaderWrap {
+  display: none;
+}
+
+.CommentForm .CommentFormWrap .FormWrapper {
+  padding-left: 0;
+}
+
+.DataListWrap .FormWrapper.FormWrapper-Condensed {
+  padding-left: 0;
+}
+
+#MessageForm .Form-HeaderWrap,
+#ConversationForm .Form-HeaderWrap {
+  display: none;
+}
+
+#MessageForm .FormWrapper,
+#ConversationForm .FormWrapper {
+  padding-left: 36px;
+}
+
+#MessageForm .FormWrapper .richEditor,
+#ConversationForm .FormWrapper .richEditor {
+  padding-left: 0;
 }
 
 .spoiler {
