--- a/applications/dashboard/scss/editor/_richEditor.scss
+++ b/applications/dashboard/scss/editor/_richEditor.scss
@@ -6,7 +6,6 @@ $richEditor_leftPadding: 36px !default;
 $richEditor_minHeight: 200px !default;
 $richEditor_verticalPadding: 9px !default;
 $richEditor_padding: $richEditor_verticalPadding 12px !default;
-$richEditor-paragraphMenu_offset: 9px!default;
 $richEditor-embedMenu_padding: 0 !default;
 $richEditor-icon_opacity: .6 !default;
 $richEditor-atMention_width: 200px !default;
@@ -33,8 +32,10 @@ $richEditor-codeBlock_padding: 16px !default;
 $richEditor-code_fg: #000000 !default;
 $richEditor-inlineCode_borderRadius: 2;
 $richEditor-inlineCode_borderColor: #a3a3a3;
-$richEditor-paragraphCode_bg: #f6f8fa;
-$richEditor-paragraphCode_fontSize: 14px;
+$richEditor-pilcrow_offset: 9px!default;
+$richEditor-pilcrow_bg: #f6f8fa;
+$richEditor-pilcrow_fontSize: 14px;
+$richEditor-pilcrow_gutter: 36px;
 $richEditor-pilcrowAnimation_duration: 0.3s;
 $richEditor-emojiCategory_color: #737982;
 $richEditor-emojiCategory_hoverColor: #212327;
@@ -87,7 +88,7 @@ $embedded-quote_fg: #A3A3A3 !default;
 
 .richEditorParagraphMenu {
     position: absolute;
-    top: $richEditor-paragraphMenu_offset;
+    top: $richEditor-pilcrow_offset;
     left: -6px;
     transform: translateX(-100%);
     height: $richEditor-icon_size;
@@ -205,7 +206,7 @@ $embedded-quote_fg: #A3A3A3 !default;
 }
 
 .richEditor-upload {
-    display: none;
+    display: none !important;
 }
 
 .embedBar {
@@ -501,8 +502,8 @@ $embedded-quote_fg: #A3A3A3 !default;
     border-radius: 0;
     background: none;
     padding: 12px;
-    font-size: $richEditor-paragraphCode_fontSize;
-    background-color: $richEditor-paragraphCode_bg;
+    font-size: $richEditor-pilcrow_fontSize;
+    background-color: $richEditor-pilcrow_bg;
 
 }
 
@@ -675,4 +676,61 @@ $embedded-quote_fg: #A3A3A3 !default;
     user-select: all;
     color: inherit;
     font-weight: $richEditor-atMentionLink_weight;
+}
+
+// Handle gutter for paragraph menu
+
+// New Discussions
+.Section-PostDiscussion {
+    #DiscussionForm {
+        select {
+            max-width: 100%;
+        }
+
+        .FormWrapper {
+            padding: {
+                left: $richEditor-pilcrow_gutter;
+            }
+
+            .richEditor {
+                padding-left: $richEditor-pilcrow_gutter;
+            }
+        }
+    }
+}
+
+// Comment
+.CommentForm {
+    .CommentFormWrap {
+        .Form-HeaderWrap {
+            display: none;
+        }
+
+        .FormWrapper {
+            padding-left: 0;
+        }
+    }
+}
+
+// Activity
+.DataListWrap {
+    .FormWrapper.FormWrapper-Condensed {
+        padding-left: 0;
+    }
+}
+
+// New Message
+#MessageForm,
+#ConversationForm {
+    .Form-HeaderWrap {
+        display: none;
+    }
+
+    .FormWrapper {
+        padding-left: $richEditor-pilcrow_gutter;
+
+        .richEditor {
+            padding-left: 0;
+        }
+    }
 }
