--- a/applications/dashboard/scss/editor/_richEditor.scss
+++ b/applications/dashboard/scss/editor/_richEditor.scss
@@ -696,7 +696,7 @@ body.hasRichEditor {
                 }
 
                 .richEditor {
-                    padding-left: $richEditor-pilcrow_gutter;
+                    padding-left: 0;
                 }
             }
         }
