--- a/applications/dashboard/scss/editor/_embed.scss
+++ b/applications/dashboard/scss/editor/_embed.scss
@@ -265,6 +265,7 @@ $embed-focus-color: #0291DB;
     left: 0;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: 50% 50%;
     width: $embedded-linkImage_width;
     height: 100%;
 
