--- a/applications/dashboard/scss/editor/_richEditor.scss
+++ b/applications/dashboard/scss/editor/_richEditor.scss
@@ -162,6 +162,8 @@ $embedded-quote_fg: #A3A3A3 !default;
     border: 0;
     padding: 0;
     background: none;
+    width: 100%;
+    text-align: left;
 }
 
 
